# textflow

./: .gitignore  CHANGELOG.md  README.md  RELEASE_NOTES_v0.2.0.md  index.html  package-lock.json  package.json  停止TextFlow.command  打开TextFlow.command
.github/workflows/: release-macos.yml  release-windows.yml
examples/: todos.md
src/: App.vue  main.ts  styles.css
src-tauri/: Cargo.toml  tauri.conf.json  tauri.windows.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: ai_proxy.rs  api_key.rs  keychain.rs  lib.rs  main.rs
src/components/: ScheduleNode.vue  ScheduleView.vue  SettingsPanel.vue  TagsView.vue  TaskItem.vue  TaskList.vue
src/composables/: useAi.ts  usePlatform.ts  useTheme.ts  useTodoFile.ts
src/core/: edgeOrb.ts  executor.test.ts  executor.ts  format.ts  fsWrite.ts  ids.ts  mdastDoc.ts  onboarding.test.ts  onboarding.ts  ops.ts  parser.test.ts  parser.ts  schedule.test.ts  schedule.ts  settings.test.ts  settings.ts  snapshot.ts  types.ts
src/core/ai/: apiKey.test.ts  apiKey.ts  client.ts  keychain.ts  mapper.test.ts  mapper.ts  providers.ts  tools.test.ts  tools.ts
src/theme/: theme.ts
